[tool.poetry]
name = "account-service"
version = "0.1.0"
description = ""
authors = ["pablo alanes <alanespablo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sanic = {extras = ["ext"], version = "^23.12.1"}
mongoengine = "^0.28.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-html = "^4.1.1"
sanic-testing = "^23.12.0"
mongomock = "^4.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
